--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 	</div>
 -->
 	<div id="edito"> <!-- WALLART Victor -->
-		<h2>
-			Edito
+		<h2 id="fontpetit">
+			Publié le 20/04/21
 		</h2>
 		<p>
-			C'est une phrase pour tester LA chose !
+			Présentation de la classe des MMI 1D
 		</p>
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+			Nous sommes une classe motivée ! Dès que nous avons besoin, nous nous entraidons ! Nous aimons se rassembler autour d'un verre et discuter de tout est n'importe quoi !
+      Victor Wallart, est une superbe personne qui aime l'argent. En parlant de ça, voici son Paypal : <a id="boldcolor" href="https://www.paypal.com/paypalme/LeVivi">Clique !</a>
 		</p>
 
 	</div>
